# atmega-wav-player

./: CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md
src/: main.c
src/controller/: controller.c  controller.h
src/lib/fat-fs/: ffconf.h  sdmm.c
src/lib/uTFT-ST7735/: uTFT_ST7735.c  uTFT_ST7735.h
src/player/: fifo_buffer.c  fifo_buffer.h  wav_file.c  wav_file.h  wav_player.c  wav_player.h
src/view/: screen_utils.h  view.c  view.h
